--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>My Ukraine-BoT</h1>
-    <img src="C:\Users\dspe4\OneDrive\Рабочий стол\NFT\C" alt="LOGo">
+    <img src="https://github.com/Kantsurov/Kantsurov.github.io/blob/main/LOGo.png" alt="LOGO">
 
 </body>
 </html>
