--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
 <body>
     <h1>My Ukraine-BoT</h1>
     <img src="https://github.com/Kantsurov/Kantsurov.github.io/blob/main/LOGo.png" alt="LOGO">
+    <h2>Функціонал:</h2>
+    <ul>
+        <li>Приймання текстових повідомлень</li>
+        <li>Розклад занять</li>
+        <li>Погода</li>
+        <li>Конвертація валют</li>
+        <li>Нагадування</li>
+    </ul>
 
 </body>
 </html>
