--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>My Ukraine-BoT</h1>
-    <img src="https://github.com/Kantsurov/Kantsurov.github.io/blob/main/LOGo.png" alt="LOGO">
+    <img src="LOGo.png" alt="LOGO">
     <h2>Функціонал:</h2>
     <ul>
         <li>Приймання текстових повідомлень</li>
