--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <img src="LOGo.png" alt="LOGO">
     <h2>Функціонал:</h2>
     <ul>
-        <li>Приймання текстових повідомлень</li>
-        <li>Розклад занять</li>
-        <li>Погода</li>
-        <li>Конвертація валют</li>
+        <li>Нові бронювання</li>
+        <li>Завантаження фотографій</li>
+        <li>Відгуки</li>
+        <li>Початок робочого дня</li>
         <li>Нагадування</li>
     </ul>
 
