--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>My Ukraine-BoT</title>
+    <title>Zamkneni_Bot</title>
 </head>
 <body>
-    <h1>My Ukraine-BoT</h1>
+    <h1>ZamkneniBot</h1>
     <img src="LOGo.png" alt="LOGO">
     <h2>Функціонал:</h2>
     <ul>
@@ -14,6 +14,9 @@
         <li>Відгуки</li>
         <li>Початок робочого дня</li>
     </ul>
+    <p>
+        <a href="t.me/Zamkneni_Bot" target="_blank">Перейти до бота в Телеграмі</a>
+    </p>
 
 </body>
 </html>
