--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Zamkneni_Bot</title>
 </head>
 <body>
-    <h1>ZamkneniBot</h1>
+    <h1>Zamkneni_Bot</h1>
     <img src="LOGo.png" alt="LOGO">
     <h2>Функціонал:</h2>
     <ul>
