--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <li>Початок робочого дня</li>
     </ul>
     <p>
-        <a href="https://t.me/Zamkneni_Bot" target="_blank">Перейти до Zamkneni_Bot</a>
+        <a href="https://t.me/Zamkneni_Bot" target="_blank">Go to Zamkneni_Bot</a>
     </p>
 </body>
 </html>
