--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Zamkneni_Bot</title>
+    <link rel="stylesheet" href="styles.css">
+    <script defer src="main.js"></script>
 </head>
 <body>
     <h1>Zamkneni_Bot</h1>
@@ -17,5 +19,6 @@
     <p>
         <a href="https://t.me/Zamkneni_Bot" target="_blank">Go to Zamkneni_Bot</a>
     </p>
+    <button onclick="changeBackgroundColor()">Change Background</button>
 </body>
 </html>
